ros2_usb_com_ws/log/build_2024-07-05_17-56-43/usb_ros_com/stderr.log
  File "/home/yusuf/ros2_usb_com_ws/install/usb_ros_com/lib/python3.10/site-packages/usb_ros_com/usb.py", line 23
    data_str = f"linear: {msg.linear.x}, {msg.linear.y}, {msg.angular.z},{"direction"}\n"
                                                                           ^^^^^^^^^
SyntaxError: f-string: expecting '}'

